--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      uses: mxcl/xcodebuild@v1
+      with: 
+        scheme: FitnessProject
+        platform: iOS
