--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,12 +12,22 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Xcode Setup
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '16.2'
+
     - name: Build
-      uses: mxcl/xcodebuild@v1
-      with: 
-        scheme: FitnessProject
-        platform: iOS
+      run: |
+        cd FitnessProject
+        xcodebuild build -project FitnessProject.xcodeproj -scheme FitnessProject clean build -sdk iphoneos CODE_SIGNING_ALLOWED=No
+
+    - name: Run tests
+      run: |
+        cd FitnessProject
+        xcodebuild test -project FitnessProject.xcodeproj -scheme FitnessProject clean build -sdk iphoneos -destination "platform=iOS Simulator,OS=16.1,name=iPhone 14 Pro Max" CODE_SIGNING_ALLOWED=No
