--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,14 +10,28 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      uses: mxcl/xcodebuild@v1
-      with: 
-        scheme: FitnessProject
-        platform: iOS
+    
+    - name: Select Xcode
+      run: sudo xcode-select -s /Applications/Xcode.app
+      
+    - name: Build and Test
+      run: |
+        xcodebuild test -scheme FitnessProject \
+          -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' \
+          -enableCodeCoverage YES \
+          CODE_SIGN_IDENTITY="" \
+          CODE_SIGNING_REQUIRED=NO | xcpretty && exit ${PIPESTATUS[0]}
+        
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      if: success() || failure()
+      with:
+        name: test-results
+        path: |
+          build/reports/
+          *.xcresult
