--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -s /Applications/Xcode.app
       
+    - name: Setup GoogleService-Info.plist
+      run: |
+        echo "${{ secrets.GOOGLE_SERVICE_INFO_PLIST }}" | base64 --decode > FitnessProject/GoogleService-Info.plist
+      
     - name: Build and Test
       run: |
         xcodebuild test -scheme FitnessProject \
