--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,9 +19,12 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -s /Applications/Xcode.app
       
+    - name: Create Downloads directory
+      run: mkdir -p /Users/runner/Downloads
+      
     - name: Setup GoogleService-Info.plist
       run: |
-        echo "${{ secrets.GOOGLE_SERVICE_INFO_PLIST }}" | base64 --decode > FitnessProject/GoogleService-Info.plist
+        echo "${{ secrets.GOOGLE_SERVICE_INFO_PLIST }}" | base64 --decode > /Users/runner/Downloads/GoogleService-Info.plist
       
     - name: Build and Test
       run: |
