--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,8 +31,10 @@ jobs:
         xcodebuild test -scheme FitnessProject \
           -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' \
           -enableCodeCoverage YES \
-          CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO | xcpretty && exit ${PIPESTATUS[0]}
+          CODE_SIGNING_ALLOWED=NO \
+          CODE_SIGNING_REQUIRED=NO \
+          CODE_SIGN_IDENTITY=- \
+          ONLY_ACTIVE_ARCH=YES | xcpretty && exit ${PIPESTATUS[0]}
         
     - name: Upload test results
       uses: actions/upload-artifact@v4
