--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: macos-latest
 
     steps:
@@ -26,21 +26,11 @@ jobs:
       run: |
         echo "${{ secrets.GOOGLE_SERVICE_INFO_PLIST }}" | base64 --decode > /Users/runner/Downloads/GoogleService-Info.plist
       
-    - name: Build and Test
+    - name: Build
       run: |
-        xcodebuild test -scheme FitnessProject \
+        xcodebuild clean build \
+          -scheme FitnessProject \
           -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' \
-          -enableCodeCoverage YES \
-          CODE_SIGNING_ALLOWED=NO \
+          CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
-          CODE_SIGN_IDENTITY=- \
-          ONLY_ACTIVE_ARCH=YES | xcpretty && exit ${PIPESTATUS[0]}
-        
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: success() || failure()
-      with:
-        name: test-results
-        path: |
-          build/reports/
-          *.xcresult
+          CODE_SIGNING_ALLOWED=NO | xcpretty && exit ${PIPESTATUS[0]}
